# commander

./: .gitignore  CHANGELOG.md  FIXES_SUMMARY.txt  GPU_HEAVY_TRAINING.md  OBSERVATIONS_AND_ACTIONS.md  QUICK_FIXES.md  README.md  START_GPU_TRAINING.sh  TRAINING_CHEATSHEET.md  add_parallel_jobs.sh  cleanup_runs.py  gpu_training_patch.txt  monitor_parallel.sh  parallel_train.sh  pyproject.toml  resume_training.sh  show_lineage.py  update_active_dashboard.py
.github/workflows/: ci.yml
configs/: engagement.yaml  eval_seeds.txt  reward.yaml  scenario.yaml  units_attackers.yaml  units_defenders.yaml
docs/: API_CONTINUATION_RULES.md  BRANCHING_GUIDE.md  CRITICAL_TRAINING_FIXES.md  GPU_TRAINING_GUIDE.md  Insructions.md  OBSERVATIONS_AND_ACTIONS.md  README.md  STAGNATION_FIXES.md  WORKFLOW_GUIDE.md
mission_gym/: __init__.py  config.py  defenders.py  dynamics.py  engagement.py  env.py  metrics.py  renderer.py  reward.py  reward_components.py  scenario.py  sensors.py
mission_gym/backends/: __init__.py  base.py  isaac_stub.py  mujoco_stub.py  simple2p5d.py
mission_gym/scripts/: __init__.py  evaluate.py  list_runs.py  live_training.py  monitoring.py  play_manual.py  record_video.py  run_utils.py  smoke_test.py  train_ppo.py  view_scenario.py
runs/: dashboard.html
runs/2-defenders-20260122-151726/: lineage.json
runs/2-defenders-20260122-152430/: lineage.json  summary.txt
runs/2-defenders-20260122-152451/: lineage.json
tests/: test_actions.py  test_config.py  test_dynamics.py  test_env.py  test_metrics.py  test_monitoring.py  test_training_fixes.py
(+56 files in other folders)
